#287 - Elastic search connection
- add check for availability (currently > 0 = available)
- this is not very sophisticated...but it is working
- remove unused methods